--- a/app/assets/stylesheets/coaching.scss
+++ b/app/assets/stylesheets/coaching.scss
@@ -1,4 +1,24 @@
 // Place all the styles related to the coaching controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h3 {
+  color: gray;
+}
 
+.wrapper-gray {
+ background-color: #F4F4F4;
+ padding: 30px;
+}
+
+.form {
+  padding: 30px;
+
+}
+.form-control {
+  padding-bottom: 20px;
+}
+
+.btn {
+  width: 100%;
+  line-height: 30px;
+}
