--- a/app/views/coaching/answer.html.erb
+++ b/app/views/coaching/answer.html.erb
@@ -1,9 +1,12 @@
 
+<div class="wrapper-gray" id="question">
+  <h2> <%= @query %> </h2>
+  <h3> - You </h3>
+</div>
 
-<h2> <%= @query %> </h2>
-<h3> - You </h3>
-
-<h2> <%= @coach_answer %> </h2>
-<h3> - Your Coach </h3>
+<div class="wrapper-grey" id="answer">
+  <h2> <%= @coach_answer %> </h2>
+  <h3> - Your Coach </h3>
+</div>
 
 <%= link_to "Ask a new question", ask_path %>
