--- a/app/views/coaching/ask.html.erb
+++ b/app/views/coaching/ask.html.erb
@@ -1,6 +1,14 @@
 
-<form action="/answer">
-  <label for="question">Speak to your coach</label>
-  <input type="text" id="question" name="query" placeholder="what time is it?">
-  <input type="submit" value="Go on!" class="btn btn-primary">
-</form>
+<div class="container text-center form">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+      <form action="/answer">
+        <div class="form-group wrapper-gray">
+          <label for="question">Speak to your coach</label>
+          <input type="text" id="question" name="query" class="form-control" placeholder="what time is it?">
+          <input type="submit" value="Go on!" class="btn btn-primary">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
